--- a/wp-content/themes/subareva/src/scss/preloader.scss
+++ b/wp-content/themes/subareva/src/scss/preloader.scss
@@ -4,7 +4,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background: #e0e0e0;
+  background: #F6F6F6;
   z-index: 1001;
 }
 .preloader__row {
@@ -23,7 +23,7 @@
   position: absolute;
   display: inline-block;
   top: 0;
-  background-color: #7A0080;
+  background-color: #A9B3C0;
   border-radius: 100%;
   width: 35px;
   height: 35px;
