--- a/wp-content/themes/subareva/src/scss/templates/about.scss
+++ b/wp-content/themes/subareva/src/scss/templates/about.scss
@@ -39,7 +39,7 @@
     }
   }
   &__content{
-    width: 48%;
+    width: 44%;
     position: relative;
     z-index: 1;
   }
@@ -47,6 +47,27 @@
     transform: translateY(-100vw * $px) scale(1.35);
     width: 689vw * $px;
     height: 654vw * $px;
+    max-width: 689px;
+    max-height: 654px;
     pointer-events: none;
+    position: relative;
+    &.loaded-sfera{
+      &:after{
+        opacity: 0;
+      }
+    }
+    &:after{
+      transition-delay: 0.5s;
+      transition: all 1s ease;
+      content: "";
+      display: block;
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      width: calc(100% + 4px);
+      height: calc(100% + 4px);
+      background-color: white;
+      opacity: 1;
+    }
   }
 }
