--- a/wp-content/themes/subareva/src/scss/templates/header.scss
+++ b/wp-content/themes/subareva/src/scss/templates/header.scss
@@ -1,8 +1,50 @@
 .header{
-  padding: 50px 0 15px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 94px 0 15px 0;
   text-align: center;
+  z-index: 99;
+  transition: all 0.5s ease;
+  &.moved{
+    background-color: #FFFFFF;
+    padding: 30px 0 28px 0;
+    box-shadow: 0px 5px 20px rgba(183, 183, 220, 0.55);
+    .header__logo-hide{
+      opacity: 1;
+    }
+    .header__language{
+      top: 14px;
+    }
+    .header__logo{
+      position: absolute;
+      left: 56px;
+      top: 44px;
+      img{
+        width: 100px;
+        height: auto;
+      }
+    }
+  }
   &__logo{
     margin-bottom: 1.75rem;
+    transition: all 0.5s ease;
+    left: calc(50% - (166vw * $px));
+    top: 50px;
+    position: fixed;
+    img{
+      width: 332vw * $px;
+      height: auto;
+      transition: all 0.5s ease;
+    }
+    &-hide{
+      position: fixed;
+      top: 20px;
+      left: 56px;
+      opacity: 0;
+      transition: all 0.5s ease;
+    }
   }
   &__nav{
     .menu{
@@ -12,6 +54,9 @@
       .current_page_item{
         a{
           color: #25303B;
+          &:before{
+            width: 100%;
+          }
         }
       }
       a{
@@ -20,14 +65,32 @@
         text-transform: uppercase;
         color: #B9B9D3;
         font-weight: 500;
+        position: relative;
+        &:before{
+          content: "";
+          position: absolute;
+          bottom: -2px;
+          left: 0;
+          width: 0;
+          height: 1px;
+          background-color:  #25303b;
+          transition: all 0.5s ease;
+        }
       }
       &-item{
         margin: 0 1.125rem;
+        &:hover{
+          a{
+            &:before{
+              width: 100%;
+            }
+          }
+        }
       }
     }
   }
   &__language{
-    position: absolute;
+    position: fixed;
     top: 50px;
     right: 56px;
     width: 3.125rem;
@@ -39,7 +102,7 @@
     align-items: center;
     padding: 6px;
     cursor: pointer;
-    transition: 0.2s ease-in;
+    transition: all 0.5s ease;
     z-index: 20;
     &:hover{
       height: auto;
