--- a/wp-content/themes/subareva/src/scss/main.scss
+++ b/wp-content/themes/subareva/src/scss/main.scss
@@ -1,5 +1,5 @@
 @import "normalize";
-//@import "aos";
+@import "aos";
 @import "preloader";
 @import "swiper-bundle";
 @import "fresco";
@@ -162,7 +162,7 @@ main{
     font-size: 3.75rem;
   }
   &__back{
-    color: #E0E0EF;
+    color: #EEEEF5;
     font-size: 8rem;
     position: absolute;
     bottom: 0;
@@ -174,7 +174,6 @@ main{
     line-height: 98.3%;
     text-align: center;
     margin-bottom: 0;
-    opacity: 0.35;
   }
 }
 
@@ -183,5 +182,7 @@ main{
 @import "templates/about";
 @import "templates/team";
 @import "templates/clinic";
+@import "templates/background";
+@import "templates/preloader-page";
 @import "templates/footer";
 
