--- a/wp-content/themes/subareva/src/scss/templates/clinic.scss
+++ b/wp-content/themes/subareva/src/scss/templates/clinic.scss
@@ -87,6 +87,9 @@
       justify-content: space-between;
       align-items: center;
       z-index: 10;
+      > div{
+        cursor: pointer;
+      }
     }
   }
   &__container{
