--- a/wp-content/themes/subareva/src/scss/templates/background.scss
+++ b/wp-content/themes/subareva/src/scss/templates/background.scss
@@ -1,10 +1,14 @@
 
 .background {
-  width: 100vw;
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   //background: #3E1E68;
   z-index: -1;
   opacity: 0.2;
+  overflow: hidden;
 }
 
 $particleSize: 20vmin;
