--- a/wp-content/themes/subareva/src/scss/templates/about.scss
+++ b/wp-content/themes/subareva/src/scss/templates/about.scss
@@ -73,7 +73,9 @@
     pointer-events: none;
     position: relative;
     mix-blend-mode: multiply;
+    opacity: 0.000001;
     &.loaded-sfera{
+      opacity: 1;
       &:after{
         opacity: 0;
       }
