--- a/wp-content/themes/subareva/src/scss/templates/clinic.scss
+++ b/wp-content/themes/subareva/src/scss/templates/clinic.scss
@@ -17,63 +17,26 @@
       transform: scale(0.4);
     }
     .swiper-container{
-      padding: 180px 0 230px 0;
+      padding: 100px 0 100px 0;
       overflow: hidden;
-    }
-    .swiper-wrapper{
-      display: flex;
-      align-items: center;
-    }
-    .swiper-slide{
-      transition: all 0.5s ease;
-      z-index: 5;
-      position: relative;
-      background-color: #FFFFFF;
-      opacity: 0;
-      &:has(+.swiper-slide-prev){
-        transform: scale(2) translateX(150vw * $px);
-        opacity: 1;
+      width: 1060px;
+      margin: auto;
+      .swiper-wrapper{
+        display: flex;
+        align-items: center;
       }
-      img{
-        opacity: 0.3;
-      }
-      .clinic__slider-desc{
-        opacity: 0;
-        transition: all 0.5s ease;
-      }
-      img{
-        border-radius: 15px;
-      }
-      &-prev, &-next{
-        transform: scale(2.5);
-        z-index: 10;
-        opacity: 1;
-        img{
-          opacity: 0.6;
-        }
-      }
-      &-prev{
-        transform: scale(2.5) translateX(60vw * $px);
-      }
-      &-next{
-        transform: scale(2.5) translateX(-60vw * $px);
-        & + div{
-          transform: scale(2) translateX(-150vw * $px);
-          opacity: 1;
-        }
-      }
-
-      &-active{
-        transform: scale(3);
-        z-index: 20;
-        opacity: 1;
+      .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 350px;
         .clinic__slider-desc{
-          opacity: 1;
-          transform: scale(0.4);
-          top: calc(100% + 0.15rem);
+          opacity: 0;
+          transition: all 0.5s ease;
         }
-        img{
-          opacity: 1;
+        img {
+          display: block;
+          width: 100%;
+          border-radius: 15px;
         }
       }
     }
@@ -89,6 +52,9 @@
       z-index: 10;
       > div{
         cursor: pointer;
+        &.swiper-button-disabled{
+          opacity: 0.3;
+        }
       }
     }
   }
