--- a/wp-content/themes/subareva/src/scss/templates/portfolio.scss
+++ b/wp-content/themes/subareva/src/scss/templates/portfolio.scss
@@ -1,3 +1,49 @@
 .portfolio{
+  &__container{
 
+  }
+  &__stomatolog-block{
+    position: relative;
+  }
+  &__stomatolog-slider{
+    overflow: hidden;
+    width: 1060px;
+    margin: auto;
+    .swiper-slide {
+      background-position: center;
+      background-size: cover;
+      width: 350px;
+      img {
+        display: block;
+        width: 100%;
+      }
+    }
+  }
+  &__tabs{
+    margin-top: 3.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-item{
+      margin: 0 0.875rem;
+      &.active{
+        .button{
+          background: linear-gradient(180deg, rgba(199, 205, 248, 0.45) 0%, rgba(234, 236, 255, 0.45) 100%);
+          &:before{
+            opacity: 1;
+          }
+          span{
+            color: #FFFFFF;
+            background: linear-gradient(95.58deg, rgba(243,245,255,0) 25.17%, rgba(255,255,255,0) 94.41%);
+          }
+        }
+      }
+    }
+  }
+  &__content{
+    margin-top: 4rem;
+    .tabs-content-item{
+
+    }
+  }
 }
