--- a/wp-content/themes/subareva/src/scss/templates/pages.scss
+++ b/wp-content/themes/subareva/src/scss/templates/pages.scss
@@ -1,10 +1,30 @@
 .page{
   &-about{
-    padding-top: 23rem
+    padding-top: 23rem;
+    @media all and (max-width: 1024px){
+      padding-top: 160px;
+    }
+    @media all and (max-width: 768px){
+      padding-top: 120px;
+    }
+    @media all and (max-width: 500px){
+      padding-top: 180px;
+      padding-bottom: 70px;
+    }
   }
   &-service{
     padding-top: 17.4375rem;
     position: relative;
+    @media all and (max-width: 1024px){
+      padding-top: 160px;
+    }
+    @media all and (max-width: 768px){
+      padding-top: 120px;
+    }
+    @media all and (max-width: 500px){
+      padding-top: 74px;
+      padding-bottom: 200px;
+    }
     .start__decoration-left{
       position: fixed;
       left: -637vw * $px;
@@ -27,6 +47,16 @@
   &-contacts{
     padding-top: 17.4375rem;
     position: relative;
+    @media all and (max-width: 1024px){
+      padding-top: 160px;
+    }
+    @media all and (max-width: 768px){
+      padding-top: 120px;
+    }
+    @media all and (max-width: 500px){
+      padding-top: 74px;
+      padding-bottom: 200px;
+    }
     .start__decoration-left{
       position: fixed;
       left: -637vw * $px;
