--- a/wp-content/themes/subareva/src/scss/templates/portfolio.scss
+++ b/wp-content/themes/subareva/src/scss/templates/portfolio.scss
@@ -6,16 +6,45 @@
     position: relative;
   }
   &__stomatolog-slider{
+    padding: 100px 0 200px 0;
     overflow: hidden;
     width: 1060px;
     margin: auto;
+    z-index: 2;
+    position: relative;
+    @media all and (max-width: 1300px){
+      width: 100%;
+    }
+    @media all and (max-width: 1024px){
+      padding-top: 50px;
+    }
+    @media all and (max-width: 768px){
+      padding-top: 35px;
+    }
+    @media all and (max-width: 500px){
+      padding-top: 20px;
+      padding-bottom: 120px;
+    }
+    .swiper-wrapper{
+      display: flex;
+      align-items: center;
+    }
     .swiper-slide {
       background-position: center;
       background-size: cover;
       width: 350px;
+      -webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
+      @media all and (max-width: 500px){
+        width: 60vw;
+      }
+      .clinic__slider-desc{
+        opacity: 0;
+        transition: all 0.5s ease;
+      }
       img {
         display: block;
         width: 100%;
+        border-radius: 15px;
       }
     }
   }
