--- a/wp-content/themes/subareva/src/scss/templates/about.scss
+++ b/wp-content/themes/subareva/src/scss/templates/about.scss
@@ -22,11 +22,17 @@
 .about{
   &__container{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    @media all and (max-width: 768px){
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
+    }
     p{
       font-size: 1.25rem;
       line-height: 141.3%;
+      @media all and (max-width: 1024px){
+        font-size: 16px;
+      }
       &:last-child{
         margin-bottom: 0;
       }
@@ -35,6 +41,9 @@
   &__title{
     position: relative;
     text-align: left;
+    @media all and (max-width: 768px){
+      text-align: center;
+    }
     .about__title-before{
       opacity: 1!important;
     }
@@ -50,21 +59,57 @@
       max-width: none;
       bottom: -2.725rem;
       left: 0;
+      @media all and (max-width: 768px){
+        width: 100%;
+        transform: translateX(0);
+      }
     }
   }
   &__buttons{
     margin-top: 1.875rem;
+    @media all and (max-width: 1200px){
+      margin-right: -300px;
+      width: calc(100% + 300px);
+    }
+    @media all and (max-width: 768px){
+      margin-right: 0;
+      text-align: center;
+      width: 100%;
+    }
   }
   &__button{
     margin-right: 1.75rem;
+    @media all and (max-width: 1300px){
+      margin-right: 20px;
+    }
+    @media all and (max-width: 768px){
+      margin: 10px;
+    }
     &:last-child{
       margin-right: 0;
+      @media all and (max-width: 768px){
+        margin: 10px;
+      }
     }
   }
   &__content{
     width: 44%;
     position: relative;
     z-index: 1;
+    @media all and (max-width: 1200px){
+      width: 50%;
+    }
+    @media all and (max-width: 768px){
+      width: 100%;
+      text-align: center;
+      //margin-top: 50px;
+      br{
+        display: none;
+      }
+    }
+    @media all and (max-width: 500px){
+      margin-top: 20px;
+    }
   }
   &__sfera{
     transform: translateY(-100vw * $px) scale(1.35);
@@ -76,6 +121,30 @@
     position: relative;
     mix-blend-mode: multiply;
     opacity: 0.000001;
+    text-align: right;
+    @media all and (max-width: 1200px){
+      //transform: translateY(0) scale(1.35);
+      width: 50%;
+    }
+    @media all and (max-width: 1200px){
+      //width: 100%;
+    }
+    @media all and (max-width: 768px){
+      //transform: translateY(0) scale(2.35);
+      margin-bottom: 0;
+      text-align: center;
+      padding-right: 0;
+      height: auto;
+      width: 100%;
+      video{
+        max-width: 300px;
+      }
+    }
+    iframe{
+      @media all and (min-width: 1400px){
+        width: 100%;
+      }
+    }
     &.loaded-sfera{
       opacity: 1;
       &:after{
