--- a/wp-content/themes/subareva/src/scss/templates/contacts.scss
+++ b/wp-content/themes/subareva/src/scss/templates/contacts.scss
@@ -9,6 +9,9 @@
   &__list{
     display: flex;
     justify-content: space-between;
+    @media all and (max-width: 1024px){
+      flex-wrap: wrap;
+    }
     &-map{
       width: 100%;
       height: 289px;
@@ -19,10 +22,20 @@
   }
   &__item{
     width: calc(33.333% - 1.6875rem);
+    @media all and (max-width: 1240px){
+      width: calc(33.333% - 15px);
+    }
+    @media all and (max-width: 1024px){
+      width: 100%;
+      margin-bottom: 50px;
+    }
     &-row{
       margin-bottom: 1rem;
       display: flex;
       align-items: center;
+      @media all and (max-width: 1240px){
+        margin-bottom: 0.2rem;
+      }
     }
     span, a{
       text-decoration: none;
@@ -32,6 +45,9 @@
       letter-spacing: 0.02em;
       color: #15223D;
       margin-right: 1rem;
+      @media all and (max-width: 1240px){
+        font-size: 0.9rem;
+      }
     }
     img{
       margin-right: 0.875rem;
