--- a/wp-content/themes/subareva/src/scss/templates/header.scss
+++ b/wp-content/themes/subareva/src/scss/templates/header.scss
@@ -7,12 +7,79 @@
   text-align: center;
   z-index: 99;
   transition: all 0.5s ease;
+  @media all and (max-width: 1024px){
+    padding-top: 20px;
+  }
+  &__will{
+    opacity: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img{
+      max-width: 60vw;
+      width: 100%;
+    }
+
+  }
+  &__burger{
+    display: none;
+    position: fixed;
+    top: 8px;
+    right: 50px;
+    transition: all 0.5s;
+    cursor: pointer;
+    @media all and (max-width: 1024px){
+      display: block;
+    }
+    @media all and (max-width: 768px){
+      right: 35px;
+    }
+    @media all and (max-width: 500px){
+      right: 20px;
+    }
+    &-lines{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      span{
+        margin-bottom: 3px;
+        background-color: #15223D;
+        border-radius: 2px;
+        width: 16px;
+        &:first-child{
+          width: 10px;
+        }
+        &:nth-child(2){
+
+        }
+        &:last-child{
+          margin-bottom: 0;
+          width: 10px;
+        }
+      }
+    }
+  }
   &.moved{
     background-color: #FFFFFF;
     padding: 30px 0 28px 0;
     box-shadow: 0px 5px 20px rgba(183, 183, 220, 0.55);
     .header__logo-hide{
       opacity: 1;
+    }
+    .header__burger{
+      top: 18px;
     }
     .header__language{
       top: 14px;
@@ -33,6 +100,9 @@
     left: calc(50% - (166vw * $px));
     top: 50px;
     position: fixed;
+    @media all and (max-width: 1024px){
+      display: none;
+    }
     img{
       width: 332vw * $px;
       height: auto;
@@ -44,9 +114,16 @@
       left: 56px;
       opacity: 0;
       transition: all 0.5s ease;
+      @media all and (max-width: 1024px){
+        opacity: 1;
+        position: static;
+      }
     }
   }
   &__nav{
+    @media all and (max-width: 1024px){
+      display: none;
+    }
     .menu{
       display: flex;
       align-content: center;
@@ -91,7 +168,7 @@
   }
   &__language{
     position: fixed;
-    top: 50px;
+    top: 40px;
     right: 56px;
     width: 3.125rem;
     height: 3.125rem;
@@ -104,6 +181,9 @@
     cursor: pointer;
     transition: all 0.5s ease;
     z-index: 20;
+    @media all and (max-width: 1024px){
+      display: none;
+    }
     &:hover{
       height: auto;
       ul{
