--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -1,9 +1,3 @@
-body.loaded{
-  .start__sfera{
-    opacity: 1;
-    transform: scale(1);
-  }
-}
 .start{
   height: 100vh;
   width: 100%;
@@ -20,6 +14,13 @@ body.loaded{
     justify-content: center;
     align-items: center;
     z-index: 3;
+    opacity: 1;
+    @media all and (max-width: 1500px){
+      left: 20px;
+    }
+    @media all and (max-width: 1024px){
+      display: none;
+    }
     svg{
       transition: all 0.2s ease-in;
       g{
@@ -59,7 +60,13 @@ body.loaded{
       box-shadow: 0px 51px 188px rgba(182, 180, 255, 0.19), 0px 27.3944px 93.2004px rgba(182, 180, 255, 0.0857984), 0px 12.0704px 39.685px rgba(182, 180, 255, 0.0393476), 0px 4.1637px 12.5927px rgba(182, 180, 255, 0.0210292), 0px 0.825787px 1.52615px rgba(182, 180, 255, 0.0150356);
       backdrop-filter: blur(2px);
       border-radius: 50%;
-      z-index: 2;
+      z-index: 1;
+      @media all and (max-width: 500px){
+        width: 382px;
+        height: 382px;
+        right: -279px;
+        top: -166px;
+      }
     }
     &-left{
       position: absolute;
@@ -72,7 +79,14 @@ body.loaded{
       box-shadow: 0px 51px 188px rgba(182, 180, 255, 0.19), 0px 27.3944px 93.2004px rgba(182, 180, 255, 0.0857984), 0px 12.0704px 39.685px rgba(182, 180, 255, 0.0393476), 0px 4.1637px 12.5927px rgba(182, 180, 255, 0.0210292), 0px 0.825787px 1.52615px rgba(182, 180, 255, 0.0150356);
       backdrop-filter: blur(2px);
       border-radius: 50%;
-      z-index: 2;
+      z-index: 1;
+      @media all and (max-width: 1024px){
+        top: auto;
+        width: 458px;
+        height: 458px;
+        left: -355px;
+        bottom: -191px;
+      }
     }
     &-bottom{
       position: absolute;
@@ -84,7 +98,7 @@ body.loaded{
       box-shadow: 0px 51px 188px rgba(182, 180, 255, 0.19), 0px 27.3944px 93.2004px rgba(182, 180, 255, 0.0857984), 0px 12.0704px 39.685px rgba(182, 180, 255, 0.0393476), 0px 4.1637px 12.5927px rgba(182, 180, 255, 0.0210292), 0px 0.825787px 1.52615px rgba(182, 180, 255, 0.0150356);
       backdrop-filter: blur(2px);
       border-radius: 50%;
-      z-index: 2;
+      z-index: 1;
     }
   }
   &-container{
@@ -101,6 +115,7 @@ body.loaded{
         margin-bottom: 0;
       }
       &__nav{
+        display: block;
         .menu-item{
           margin: 0;
         }
@@ -119,16 +134,17 @@ body.loaded{
     }
   }
   &__sfera{
-    transition-delay: 5s;
-    transition: all 5s ease;
-    transform: scale(4.5);
-    opacity: 0;
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 0;
     //pointer-events: none;
-    margin-top: 80vw * $px;
+    //margin-top: 80vw * $px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media all and (max-width: 500px){
+      //margin-top: 400vw * $px;
+    }
   }
   &__container{
     height: 100vh;
@@ -141,6 +157,7 @@ body.loaded{
     z-index: 2;
     position: relative;
     width: 100%;
+    opacity: 1;
     &:before{
       position: absolute;
       left: 0;
@@ -152,6 +169,9 @@ body.loaded{
       width: 300vw * $px;
       z-index: 10;
       pointer-events: none;
+      @media all and (max-width: 1024px){
+        display: none;
+      }
     }
     &:after{
       position: absolute;
@@ -165,6 +185,9 @@ body.loaded{
       width: 300vw * $px;
       z-index: 10;
       pointer-events: none;
+      @media all and (max-width: 1024px){
+        display: none;
+      }
     }
     li{
       text-align: center;
@@ -181,12 +204,22 @@ body.loaded{
     position: fixed;
     top: 0;
     height: 100%;
-    z-index: 5;
     right: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 4;
+    opacity: 1;
+    @media all and (max-width: 1500px){
+      right: 20px;
+    }
+    @media all and (max-width: 1024px){
+      top: auto;
+      bottom: 32px;
+      right: 32px;
+      height: auto;
+    }
     svg{
       transition: all 0.2s ease-in;
       g{
@@ -212,6 +245,9 @@ body.loaded{
     }
     a{
       margin: 9px 0;
+      @media all and (max-width: 1024px){
+        margin: 17px 0 0 0;
+      }
     }
   }
 }
