--- a/wp-content/themes/subareva/src/scss/templates/team.scss
+++ b/wp-content/themes/subareva/src/scss/templates/team.scss
@@ -1,6 +1,17 @@
 .team{
   margin-top: 3rem;
   margin-bottom: 10.625rem;
+  position: relative;
+  z-index: 2;
+  @media all and (max-width: 1024px){
+    margin-bottom: 70px;
+  }
+  @media all and (max-width: 768px){
+    margin-bottom: 55px;
+  }
+  @media all and (max-width: 500px){
+    margin-bottom: 40px;
+  }
   &__container{
 
   }
@@ -8,15 +19,32 @@
     display: flex;
     flex-wrap: wrap;
     margin-right: -30px;
+    @media all and (max-width: 1024px){
+      margin-right: -20px;
+    }
   }
   &__item{
     width: calc(20% - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
+    @media all and (max-width: 1024px){
+      width: calc(25% - 20px);
+      margin-right: 20px;
+      margin-bottom: 20px;
+    }
+    @media all and (max-width: 768px){
+      width: calc(33.33333% - 20px);
+    }
+    @media all and (max-width: 500px){
+      width: calc(50% - 20px);
+    }
   }
   &__img{
     border-radius: 15px;
     overflow: hidden;
+    img{
+      width: 100%;
+    }
   }
   &__name{
     margin-top: 1.3125rem;
