--- a/wp-content/themes/subareva/src/scss/templates/clinic.scss
+++ b/wp-content/themes/subareva/src/scss/templates/clinic.scss
@@ -54,6 +54,7 @@
         align-items: center;
       }
       .swiper-slide {
+        display: block;
         background-position: center;
         background-size: cover;
         width: 350px;
