--- a/wp-content/themes/subareva/src/scss/templates/header.scss
+++ b/wp-content/themes/subareva/src/scss/templates/header.scss
@@ -5,10 +5,71 @@
   width: 100%;
   padding: 104px 0 15px 0;
   text-align: center;
-  z-index: 99;
+  z-index: 100;
   transition: all 0.5s ease;
   @media all and (max-width: 1024px){
     padding-top: 20px;
+  }
+  &__mob{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    #qtranslate-chooser{
+      display: flex;
+      align-items: center;
+      li{
+        margin: 0 20px;
+        a{
+          text-decoration: none;
+        }
+        span{
+          font-weight: 800;
+          font-size: 18px;
+          line-height: 98.3%;
+          text-transform: uppercase;
+          color: #A9B3C0;
+        }
+        &.active{
+          span{
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    .start__socials{
+      position: static;
+      height: auto;
+      flex-direction: row;
+      margin-top: 50px;
+      display: flex;
+      a{
+        margin: 0 14px;
+      }
+    }
+    .menu{
+      margin-bottom: 72px;
+      &-item{
+        margin-bottom: 50px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        a{
+          font-weight: 800;
+          font-size: 24px;
+          line-height: 98.3%;
+          text-transform: uppercase;
+          color: #15223D;
+          text-decoration: none;
+        }
+      }
+    }
   }
   &__will{
     opacity: 1;
@@ -34,6 +95,7 @@
     right: 50px;
     transition: all 0.5s;
     cursor: pointer;
+    z-index: 101;
     @media all and (max-width: 1024px){
       display: block;
     }
@@ -42,6 +104,18 @@
     }
     @media all and (max-width: 500px){
       right: 20px;
+    }
+    img{
+      transition: 0.3s;
+    }
+    &.active{
+      background-image: url("../../img/templates/header/burger-close.png");
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      img{
+        opacity: 0;
+      }
     }
     &-lines{
       position: absolute;
