--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -55,17 +55,31 @@
       width: 610vw * $px;
       top: -450vw * $px;
       right: 95vw * $px;
-      background: rgba(255, 255, 255, 0.9);
-      opacity: 0.5;
+      background: rgba(255, 255, 255, 1);
+      opacity: 1;
       box-shadow: 0px 51px 188px rgba(182, 180, 255, 0.19), 0px 27.3944px 93.2004px rgba(182, 180, 255, 0.0857984), 0px 12.0704px 39.685px rgba(182, 180, 255, 0.0393476), 0px 4.1637px 12.5927px rgba(182, 180, 255, 0.0210292), 0px 0.825787px 1.52615px rgba(182, 180, 255, 0.0150356);
       backdrop-filter: blur(2px);
       border-radius: 50%;
-      z-index: 1;
+      z-index: 99;
+      transition: all 1.2s;
       @media all and (max-width: 500px){
-        width: 382px;
-        height: 382px;
-        right: -279px;
-        top: -166px;
+        width: 382px!important;
+        height: 382px!important;
+        right: -279px!important;
+        top: -166px!important;
+      }
+      &.moved{
+        top: -600vw * $px!important;
+      }
+      &.burger-active{
+        width: 600vw!important;
+        height: 600vw!important;
+        transform-origin: top right;
+        transition-delay: 0.3s;
+        border-radius: 0;
+        z-index: 99;
+        opacity: 1;
+        background: rgba(255, 255, 255, 1);
       }
     }
     &-left{
