--- a/wp-content/themes/subareva/src/scss/templates/service.scss
+++ b/wp-content/themes/subareva/src/scss/templates/service.scss
@@ -25,6 +25,32 @@
     border-radius: 15px;
     overflow: hidden;
     margin-bottom: 15px;
+    &-img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: auto;
+    }
+    &-contacts{
+      text-align: right;
+      @media all and (max-width: 1024px){
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+      }
+      a{
+        margin-left: 50px;
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 139.3%;
+        color: #A9B3C0;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+    }
   }
   &__head{
     padding: 30px 136px 30px 43px;
@@ -35,10 +61,18 @@
     cursor: pointer;
     position: relative;
     transition: all 0.5s;
+    @media all and (max-width: 1024px){
+      padding: 20px 70px 20px 20px;
+      font-size: 16px;
+      font-weight: 600;
+    }
     svg{
       position: absolute;
       right: 57px;
       top: calc(50% - 4px);
+      @media all and (max-width: 1024px){
+        right: 20px;
+      }
     }
     &:hover{
       background-color: #DAE0FF;
@@ -46,10 +80,26 @@
   }
   &__content{
     display: none;
-    padding: 30px 136px 30px 43px;
+    padding: 30px 136px 30px 25%;
     background: #F7F7F7;
+    position: relative;
+    @media all and (max-width: 1024px){
+      padding: 20px 20px 20px 20px;
+    }
     p{
       font-size: 16px;
+      @media all and (max-width: 500px){
+        font-size: 14px;
+      }
+    }
+    *{
+      position: relative;
+      z-index: 1;
+    }
+    .service__item-img{
+      position: absolute;
+      z-index: 0;
     }
   }
+
 }
