--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -50,25 +50,27 @@
   }
   &__decoration{
     &-top{
-      position: absolute;
+      position: fixed;
       height: 610vw * $px;
       width: 610vw * $px;
       top: -450vw * $px;
-      right: 95vw * $px;
+      right: 0;
       background: rgba(255, 255, 255, 1);
       opacity: 1;
       box-shadow: 0px 51px 188px rgba(182, 180, 255, 0.19), 0px 27.3944px 93.2004px rgba(182, 180, 255, 0.0857984), 0px 12.0704px 39.685px rgba(182, 180, 255, 0.0393476), 0px 4.1637px 12.5927px rgba(182, 180, 255, 0.0210292), 0px 0.825787px 1.52615px rgba(182, 180, 255, 0.0150356);
       backdrop-filter: blur(2px);
       border-radius: 50%;
       z-index: 99;
-      transition: all 1.2s;
+      //transition-duration: 1s;
       @media all and (max-width: 500px){
-        width: 382px!important;
-        height: 382px!important;
-        right: -279px!important;
-        top: -166px!important;
+        width: 382px;
+        height: 382px;
+        right: -279px;
+        top: -166px;
       }
       &.moved{
+        width: 0;
+        height: 0;
         top: -600vw * $px!important;
       }
       &.burger-active{
@@ -80,6 +82,7 @@
         z-index: 99;
         opacity: 1;
         background: rgba(255, 255, 255, 1);
+        transition-duration: 1s;
       }
     }
     &-left{
@@ -123,7 +126,7 @@
       left: 0;
       width: 100%;
       height: auto;
-      z-index: 10;
+      z-index: 100;
       margin-top: 10px;
       &__logo{
         margin-bottom: 0;
