--- a/wp-content/themes/subareva/src/scss/templates/reviews.scss
+++ b/wp-content/themes/subareva/src/scss/templates/reviews.scss
@@ -1,13 +1,24 @@
 .reviews{
-  margin-top: 11.8125rem;
+  margin-top: 6.8125rem;
   margin-bottom: 9.6875rem;
+  @media all and (max-width: 768px){
+    margin-top: 100px;
+    margin-bottom: 0;
+  }
   &__slider{
     position: relative;
     margin-top: 4.5rem;
+    padding: 0 100px;
+    @media all and (max-width: 768px){
+      padding: 0;
+    }
     .swiper-container{
-      width: 1060px;
+      width: 100%;
       margin: auto;
       overflow: hidden;
+      @media all and (max-width: 768px){
+        margin-bottom: 40px;
+      }
     }
   }
   .clinic__slider-nav{
@@ -18,18 +29,40 @@
     justify-content: space-between;
     position: relative;
     z-index: 2;
+    @media all and (max-width: 768px){
+      position: relative;
+    }
+    @media all and (max-width: 500px){
+      flex-wrap: wrap;
+    }
     &-img{
       border-radius: 1.25rem;
       width: 26.0625rem;
       overflow: hidden;
       position: relative;
+      @media all and (max-width: 1400px){
+        width: 35%;
+      }
+      @media all and (max-width: 768px){
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 190px;
+        height: 132px;
+      }
+      @media all and (max-width: 500px){
+        position: relative;
+        width: 100%;
+        height: 240px;
+        margin-bottom: 20px;
+      }
       &:before{
         content: "";
         display: block;
         width: 100%;
         height: 100%;
         position: absolute;
-        background: linear-gradient(0deg, rgba(21, 34, 61, 0.58), rgba(21, 34, 61, 0.58)), url(image.png);
+        background: linear-gradient(0deg, rgba(21, 34, 61, 0.58), rgba(21, 34, 61, 0.58));
         box-shadow: 0px 90px 98px rgba(222, 223, 226, 0.44);
         backdrop-filter: blur(3px);
         top: 0;
@@ -53,6 +86,13 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      @media all and (max-width: 1400px){
+        width: calc(65% - 30px);
+      }
+      @media all and (max-width: 768px){
+        position: relative;
+        width: 100%;
+      }
     }
     &-name{
       font-weight: 700;
@@ -60,23 +100,48 @@
       line-height: 141.3%;
       color: #15223D;
       margin-bottom: 4px;
+      @media all and (max-width: 768px){
+        padding-left: 212px;
+      }
+      @media all and (max-width: 500px){
+        padding-left: 0;
+      }
     }
     &-work{
       font-weight: 400;
       font-size: 1.125rem;
       line-height: 141.3%;
       color: #A9B3C0;
+      @media all and (max-width: 768px){
+        padding-left: 212px;
+      }
+      @media all and (max-width: 500px){
+        padding-left: 0;
+      }
     }
     &-content{
       margin-top: 1.875rem;
       svg{
         margin-bottom: 1rem;
+        @media all and (max-width: 768px){
+          padding-left: 212px;
+          overflow: visible;
+          pointer-events: none;
+          //transform: translate(212px);
+        }
+        @media all and (max-width: 500px){
+          padding-left: 0;
+          display: none;
+        }
       }
       p{
         font-weight: 400;
         font-size: 1rem;
         line-height: 141.3%;
         color: #15223D;
+        @media all and (max-width: 768px){
+          font-size: 14px;
+        }
       }
     }
   }
