--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -133,8 +133,11 @@
       }
       &__nav{
         display: block;
+        height: 100%;
         .menu-item{
           margin: 0;
+          display: flex;
+          align-items: center;
         }
       }
     }
@@ -214,7 +217,7 @@
       text-transform: uppercase;
       text-decoration: none;
       color: #15223D;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
   &__contacts{
