--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -138,6 +138,10 @@
           margin: 0;
           display: flex;
           align-items: center;
+          justify-content: center;
+          @media all and (max-width: 500px){
+            justify-content: center;
+          }
         }
       }
     }
