--- a/wp-content/themes/subareva/src/scss/templates/start.scss
+++ b/wp-content/themes/subareva/src/scss/templates/start.scss
@@ -132,7 +132,7 @@
         margin-bottom: 0;
       }
       &__nav{
-        display: block;
+        display: none;
         height: 100%;
         .menu-item{
           margin: 0;
