--- a/wp-content/themes/subareva/src/scss/main.scss
+++ b/wp-content/themes/subareva/src/scss/main.scss
@@ -3,6 +3,8 @@
 @import "preloader";
 @import "swiper-bundle";
 @import "fresco";
+@import "foundation";
+@import "twentytwenty";
 //@import "two-img";
 //@import "img-comp";
 @import "default";
@@ -118,6 +120,8 @@ video{
   position: relative;
   overflow: hidden;
   text-decoration: none;
+  min-height: 78px;
+  transition: all 0.3s ease;
   @media all and (max-width: 500px){
     min-width: 248px;
   }
@@ -137,8 +141,9 @@ video{
     background: linear-gradient(95.58deg, #3850FF 25.17%, #278CE9 94.41%);
     box-shadow: 0px 1px 8px rgba(61, 112, 231, 0.3);
     border-radius: 49px;
-    opacity: 0;
+    opacity: 1;
     transition: 0.3s ease;
+
   }
   &:hover{
     background: linear-gradient(180deg, rgba(199, 205, 248, 0.45) 0%, rgba(234, 236, 255, 0.45) 100%);
@@ -156,8 +161,8 @@ video{
   }
   span, p{
     transition: all 0.3s ease;
-    position: relative;
-    padding: 1.0625rem;
+    position: absolute;
+    padding: 0 1.0625rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -168,6 +173,11 @@ video{
     font-weight: 600;
     font-size: 1rem;
     text-transform: uppercase;
+    width: calc(100% - 24px);
+    height: calc(100% - 24px);
+    transition: all 0.3s ease;
+    top: 12px;
+    left: 12px;
     input{
       transition: all 0.3s ease;
       text-transform: uppercase;
@@ -179,7 +189,7 @@ video{
   font-weight: 600;
   line-height: 98.3%;
   position: relative;
-
+  font-family: 'Montserrat', sans-serif;
   &__main{
     position: relative;
     z-index: 1;
