--- a/wp-content/themes/subareva/src/scss/templates/clinic.scss
+++ b/wp-content/themes/subareva/src/scss/templates/clinic.scss
@@ -90,8 +90,32 @@
         display: block;
         background-position: center;
         background-size: cover;
-        width: 371px;
-        -webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
+        width: 754px;
+        height: 300px;
+        //-webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
+        position: relative;
+        &:after{
+          content: "";
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: white;
+          opacity: 0.9;
+          transition: 0.3s;
+        }
+        &-active{
+          &:after{
+            opacity: 0;
+          }
+        }
+        &-next, &-prev{
+          &:after{
+            opacity: 0.3;
+          }
+        }
         @media all and (max-width: 500px){
           width: 60vw;
         }
@@ -100,8 +124,10 @@
           transition: all 0.5s ease;
         }
         img {
+          object-fit: cover;
           display: block;
           width: 100%;
+          height: 100%;
           border-radius: 15px;
         }
       }
