--- a/wp-content/themes/subareva/src/scss/templates/header.scss
+++ b/wp-content/themes/subareva/src/scss/templates/header.scss
@@ -3,10 +3,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 104px 0 15px 0;
+  padding: 40px 0;
   text-align: center;
   z-index: 100;
   transition: all 0.5s ease;
+  &__small-container{
+    display: flex;
+    max-width: 1920px;
+    margin: auto;
+    padding: 0 50px;
+    align-items: center;
+  }
   @media all and (max-width: 1024px){
     padding-top: 20px;
   }
@@ -21,6 +28,21 @@
     justify-content: center;
     align-items: center;
     z-index: 100;
+    &-phones{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 4vh;
+      a{
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 98.3%;
+        color: #0B141F;
+        text-decoration: none;
+        display: inline-block;
+        margin-bottom: 10px;
+      }
+    }
     #qtranslate-chooser{
       display: flex;
       align-items: center;
@@ -30,11 +52,11 @@
           text-decoration: none;
         }
         span{
-          font-weight: 800;
+          font-weight: 600;
           font-size: 18px;
           line-height: 98.3%;
           text-transform: uppercase;
-          color: #A9B3C0;
+          color: #000000;
         }
         &.active{
           span{
@@ -47,22 +69,22 @@
       position: static;
       height: auto;
       flex-direction: row;
-      margin-top: 50px;
+      margin-bottom: 74px;
       display: flex;
       a{
         margin: 0 14px;
       }
     }
     .menu{
-      margin-bottom: 72px;
+      margin-bottom: 42px;
       &-item{
-        margin-bottom: 50px;
+        margin-bottom: 40px;
         &:last-child{
           margin-bottom: 0;
         }
         a{
-          font-weight: 800;
-          font-size: 24px;
+          font-weight: 500;
+          font-size: 16px;
           line-height: 98.3%;
           text-transform: uppercase;
           color: #15223D;
@@ -147,39 +169,50 @@
   }
   &.moved{
     background-color: #FFFFFF;
-    padding: 30px 0 28px 0;
-    box-shadow: 0px 5px 20px rgba(183, 183, 220, 0.55);
-    .header__logo-hide{
-      opacity: 1;
-    }
-    .header__burger{
-      top: 18px;
+    padding: 25px 0;
+    //padding: 30px 0 28px 0;
+    //box-shadow: 0px 5px 20px rgba(183, 183, 220, 0.55);
+    //.header__logo-hide{
+    //  opacity: 1;
+    //}
+    //.header__burger{
+    //  top: 18px;
+    //}
+    //.header__language{
+    //  top: 14px;
+    //}
+    //.header__logo{
+    //  position: absolute;
+    //  left: 56px;
+    //  top: 44px;
+    //  opacity: 0;
+    //  img{
+    //    width: 100px;
+    //    height: auto;
+    //  }
+    //}
+    @media all and (max-width: 1024px){
+      padding: 22px 0;
     }
     .header__language{
-      top: 14px;
-    }
-    .header__logo{
-      position: absolute;
-      left: 56px;
-      top: 44px;
-      opacity: 0;
-      img{
-        width: 100px;
-        height: auto;
-      }
+      top: 9px;
     }
   }
   &__logo{
-    margin-bottom: 1.75rem;
+    //margin-bottom: 1.75rem;
     transition: all 0.5s ease;
-    left: calc(50% - (166vw * $px));
+    margin-right: 57px;
+    //left: calc(50% - (166vw * $px));
     top: 50px;
-    position: fixed;
+    //position: fixed;
+    @media all and (max-width: 1600px){
+      margin-right: 20px;
+    }
     @media all and (max-width: 1024px){
       display: none;
     }
     img{
-      width: 332vw * $px;
+      width: 215vw * $px;
       height: auto;
       transition: all 0.5s ease;
     }
@@ -196,13 +229,49 @@
     }
   }
   &__nav{
+    margin-right: 57px;
+    @media all and (max-width: 1600px){
+      margin-right: 20px;
+    }
+    @media all and (max-width: 1130px){
+      flex: 1;
+    }
+    &-phones{
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media all and (max-width: 1400px){
+        flex-direction: column;
+      }
+      @media all and (max-width: 1130px){
+        display: none;
+      }
+      a{
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 98.3%;
+        color: #0B141F;
+      }
+      span{
+        display: inline-block;
+        margin: 0 20px;
+        @media all and (max-width: 1400px){
+          display: none;
+        }
+        &:last-child{
+          display: none;
+        }
+      }
+    }
     @media all and (max-width: 1024px){
       display: none;
     }
     .menu{
       display: flex;
       align-content: center;
-      justify-content: center;
+      justify-content: flex-start;
       .current_page_item{
         a{
           color: #25303B;
@@ -218,19 +287,22 @@
         color: #B9B9D3;
         font-weight: 500;
         position: relative;
-        &:before{
-          content: "";
-          position: absolute;
-          bottom: -2px;
-          left: 0;
-          width: 0;
-          height: 1px;
-          background-color:  #25303b;
-          transition: all 0.5s ease;
-        }
+        //&:before{
+        //  content: "";
+        //  position: absolute;
+        //  bottom: -2px;
+        //  left: 0;
+        //  width: 0;
+        //  height: 1px;
+        //  background-color:  #25303b;
+        //  transition: all 0.5s ease;
+        //}
       }
       &-item{
         margin: 0 1.125rem;
+        @media all and (max-width: 1600px){
+          margin: 0 10px;
+        }
         &:hover{
           a{
             &:before{
@@ -242,9 +314,6 @@
     }
   }
   &__language{
-    position: fixed;
-    top: 40px;
-    right: 56px;
     width: 3.125rem;
     height: 3.125rem;
     background: linear-gradient(180deg, rgba(225, 228, 247, 0.45) 0%, rgba(247, 248, 255, 0.45) 100%);
@@ -256,6 +325,9 @@
     cursor: pointer;
     transition: all 0.5s ease;
     z-index: 20;
+    position: fixed;
+    right: 50px;
+    top: 20px;
     @media all and (max-width: 1024px){
       display: none;
     }
