--- a/wp-content/themes/subareva/src/scss/templates/portfolio.scss
+++ b/wp-content/themes/subareva/src/scss/templates/portfolio.scss
@@ -12,7 +12,7 @@
       padding: 0;
     }
   }
-  &__stomatolog-slider{
+  &__stomatolog-slider, &__cosmetics-slider{
     padding: 100px 0 200px 0;
     overflow: hidden;
     max-width: 1060px;
@@ -41,20 +41,46 @@
       align-items: center;
     }
     .swiper-slide {
-      background-position: center;
-      background-size: cover;
-      width: 365px;
-      -webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
+      display: block;
+      width: 754px;
+      height: 300px;
+      //-webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
+      position: relative;
+      //-webkit-box-reflect: below 1px linear-gradient(transparent, transparent , #0002 , #0004);
       @media all and (max-width: 500px){
         width: 60vw;
+      }
+      &:after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        opacity: 0.9;
+        transition: 0.3s;
+      }
+      &-active{
+        &:after{
+          opacity: 0;
+        }
+      }
+      &-next, &-prev{
+        &:after{
+          opacity: 0.3;
+        }
       }
       .clinic__slider-desc{
         opacity: 0;
         transition: all 0.5s ease;
       }
       img {
+        object-fit: cover;
         display: block;
         width: 100%;
+        height: 100%;
         border-radius: 15px;
       }
     }
@@ -91,6 +117,10 @@
     }
     &-item{
       position: relative;
+      display: none;
+      &.active{
+        display: block;
+      }
     }
     .tabs-content-item{
 
