--- a/wp-content/themes/subareva/src/scss/templates/reviews.scss
+++ b/wp-content/themes/subareva/src/scss/templates/reviews.scss
@@ -16,6 +16,7 @@
       width: 100%;
       margin: auto;
       overflow: hidden;
+      box-shadow: 0px 0px 41px rgba(185, 185, 211, 0.15);
       @media all and (max-width: 768px){
         margin-bottom: 40px;
       }
@@ -29,11 +30,17 @@
     justify-content: space-between;
     position: relative;
     z-index: 2;
+    background: #FFFFFF;
+    border-radius: 15px;
+    overflow: hidden;
+    padding: 40px;
     @media all and (max-width: 768px){
       position: relative;
+      padding: 30px;
     }
     @media all and (max-width: 500px){
       flex-wrap: wrap;
+      padding: 20px;
     }
     &-img{
       border-radius: 1.25rem;
@@ -82,7 +89,7 @@
       }
     }
     &-desc{
-      width: calc(100% - 31.125rem);
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
