--- a/wp-content/themes/subareva/src/scss/templates/service.scss
+++ b/wp-content/themes/subareva/src/scss/templates/service.scss
@@ -25,12 +25,22 @@
     border-radius: 15px;
     overflow: hidden;
     margin-bottom: 15px;
+    &-desc{
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 139.3%;
+      letter-spacing: 0.02em;
+      color: #A9B3C0;
+    }
     &-img{
       position: absolute;
       top: 0;
-      left: 0;
+      right: 0;
       height: 100%;
       width: auto;
+      @media all and (max-width: 768px){
+        opacity: 0.3;
+      }
     }
     &-contacts{
       text-align: right;
@@ -84,16 +94,35 @@
     background: #F7F7F7;
     position: relative;
     transition: all 0.5s;
-    padding: 0 136px 0 25%;
+    padding: 0 25% 0 43px;
     max-height: 0;
+    table{
+      margin-bottom: 25px;
+      td{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 98.3%;
+        padding: 5px 0;
+        @media all and (max-width: 768px){
+          font-size: 15px;
+        }
+        @media all and (max-width: 500px){
+          font-size: 14px;
+          padding: 5px 10px;
+        }
+      }
+    }
     &.open{
-      padding: 30px 136px 30px 25%;
+      padding: 30px 25% 30px 43px;
       height: auto;
       max-height: 100vh;
       transition: all 0.5s;
+      @media all and (max-width: 1024px){
+        padding: 20px 20px 20px 20px;
+      }
     }
     @media all and (max-width: 1024px){
-      padding: 20px 20px 20px 20px;
+      padding: 0 20px 0 20px;
     }
     p{
       font-size: 16px;
